--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
   text-align: right;
 }
 
-.aaa img {
+img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.aaa,
+.more_inf {
   font-family: fantasy, cursive;
 }
 
@@ -49,11 +50,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input, button{
+input,
+button{
   outline: none;
 }
 
@@ -72,7 +75,8 @@ button:hover {
 }
 
 /* Heading */
-h3, label[for="new-task"] {
+h3,
+label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -138,32 +142,38 @@ li > input[type="text"] {
   width: 226px;
 }
 
-.delete img {
+.delete
+img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.delete, 
+img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul 
+li 
+input[type=text] {
   display: none;
 }
 
-ul .editMode input[type=text] {
+.editMode 
+input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul .editMode label {
+.editMode 
+label {
   display: none;
 }
